# MoonDAO

./: .gitignore  .gitmodules  LICENSE.md  MANUAL_REFUNDS_SUMMARY.md  MoonDAO_XP_System_Documentation.md  README.md  codecov.yml  frank-reopen-arbitrum-rollout-plan.md  frank-reopen-deploy-plan.md  package-lock.json  package.json  vercel.json
.cursor/: BUGBOT.md
agent/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent/prompts/: bug_analysis.md  code_review.md  fix_generation.md
agent/scripts/: setup-runner.sh
agent/src/: __init__.py  analyzer.py  config.py  fixer.py  models.py  orchestrator.py  reporter.py  reviewer.py  scanner.py  tester.py
agent/src/tools/: __init__.py  claude.py  github.py
agent/tests/: __init__.py  test_models.py
contracts/: .env.sample  .gitignore  README.md  curve.py  foundry.toml  package-lock.json  package.json  remappings.txt
dispatcher/: .env  .gitmodules  Dockerfile  README.md  cloudbuild-trigger.yaml  package-lock.json  package.json  tsconfig.json
docs/: 2026_EXECUTIVE_LEAD_ELECTION_OPTIONS.md  CONTRACT_OWNERSHIP_AUDIT.md  DEPRIZE.md  DEPRIZE_M1.md  DEPRIZE_M2.md  DEPRIZE_M3.md  DEPRIZE_M4.md  DEPRIZE_M5.md  DEPRIZE_QA.md  DOC.md  HANDOFF_QUESTS_FIXES.md  LAUNCHPAD.md  LAUNCHPAD_SPEC.md  LIQUIDITY.md  PROPOSAL_AUTHOR_VOTING_RESTRICTION.md  Q4_2025_EB_REWARD_AUDIT.md  QUESTS_AUDIT.md  RETRO.md  SUPER_MANAGERS_TECHNICAL_BRIEF.md  overview-delegation-plan-a.md
fee-hook/: .gitignore  .gitmodules  0001-patch-version.patch  README.md  apply_patch.sh  foundry.toml  install.txt  package-lock.json  package.json  remappings.txt
prediction/: .env  .gitignore  README.md  deprize.config.js  markets.config.js  package.json  truffle.js
scripts/: drop-miguel-commits.sh
space/: README.md
subscription-contracts/: .gitignore  .gitmodules  0001-patch-hats.patch  (+14 more)
(+2660 files in other folders)
